<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:id="@+id/main">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/login_title"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="24sp"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_description"
        android:textColor="@color/border"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_marginTop="56dp"
        android:paddingBottom="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/email"
            android:textColor="@color/label"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/border"
            app:strokeColor="@color/white"
            app:boxStrokeWidth="1dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ilEditEmail"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/montserrat_regular"
                android:padding="0dp"
                android:textSize="16sp"
                android:textColor="@color/text"
                android:textColorHint="@color/border" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llEmail">
        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/label"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_medium"
 />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/border"
            app:strokeColor="@color/white"
            app:boxStrokeWidth="1dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/light_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ilEditPassword"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:padding="0dp"
                android:textColor="@color/text"
                android:textColorHint="@color/border" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/twForgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/purple"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="14sp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/white"
        android:text="@string/login"
        android:backgroundTint="@color/purple"
        android:layout_marginTop="20dp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twForgetPass" />

    <Button
        android:id="@+id/btnGoogleOAuth"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/login_google"
        android:textColor="@color/text"
        android:textSize="14sp"
        app:icon="@drawable/google"
        app:iconTint="@null"
        app:iconGravity="textStart"
        app:iconSize="20dp"
        app:cornerRadius="8dp"
        app:strokeColor="@color/border"
        app:strokeWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/purple"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="14sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogleOAuth" />

</androidx.constraintlayout.widget.ConstraintLayout>