<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/twTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="24sp"
        />

        <TextView
            android:id="@+id/twDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/loading_description"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:layout_marginHorizontal="24dp"
        />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="343dp"
            android:layout_height="343dp"
            android:layout_marginTop="118dp"
            android:contentDescription="@string/app_loading"
            android:layout_marginHorizontal="27dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.274"
            app:srcCompat="@drawable/ic_loading"
        />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>