<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingHorizontal="24dp"
        android:text="@string/using_with_enjoy"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/ivSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="150dp"
            app:srcCompat="@drawable/ic_check_circle" />

        <TextView
            android:id="@+id/tvContentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:textColor="@color/text"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="24sp"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/tvContentDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/congratulations_description" />


    </LinearLayout>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/montserrat_regular"
        android:paddingHorizontal="32dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_gravity="bottom"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>