<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/main">

    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/text"
        android:text="@string/skip"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgOnboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="149dp"
        android:layout_marginHorizontal="0dp"
        android:contentDescription="@string/onboarding_step_1_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_onboarding_1" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onb1_title"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="24sp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgOnboarding" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/obn1_description"
        android:textColor="@color/text"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:background="@drawable/shape_continue_button"
        app:backgroundTint="@color/purple"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnStep1"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="60dp"
        app:backgroundTint="@color/purple"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnStep2"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStep1"
        />

    <Button
        android:id="@+id/btnStep3"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStep2"
        />


</androidx.constraintlayout.widget.ConstraintLayout>