<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingBottom="10dp"
        android:text="@string/app_name"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/getting_started_description"
        android:textColor="#B3000000"
        android:textSize="14sp"
        android:paddingHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imgStarting"
        android:layout_width="343dp"
        android:layout_height="343dp"
        android:layout_marginTop="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDescription"
        app:srcCompat="@drawable/ic_loading" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="16sp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/white"
        app:backgroundTint="@color/purple"
        android:paddingVertical="12dp"
        android:text="@string/login"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgStarting" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/signup"
        android:textColor="@color/white_button_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
        app:cornerRadius="8dp"
        app:strokeColor="@color/border"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>